@@ -14,6 +14,8 @@ New Features:
   or the same object is modified frequently.
 - location of "webapps" folder can be configured in bean "jetty6.server"
   inside "conf/red5.xml" (Jira APPSERVER-152)
+- "IStreamFilenameGenerator" can specify if it returns absolute or relative
+  paths
 
 Bugfixes:
 - validate RTMP handshake received from client (Jira APPSERVER-159)
